Implement Executor WIP